Added ability to share images

--- a/Share/Share.Plugin.Abstractions/Share.Plugin.Abstractions.csproj
+++ b/Share/Share.Plugin.Abstractions/Share.Plugin.Abstractions.csproj
@@ -12,4 +12,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <DocumentationFile>bin\Release\netstandard1.0\Plugin.Share.Abstractions.xml</DocumentationFile>
   </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="Xamarin.Forms" Version="2.5.1.444934" />
+  </ItemGroup>
 </Project>
